--- a/index.html
+++ b/index.html
@@ -4,22 +4,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>InstaBoost - Instagram Video Downloader</title>
+  <title>ReelSaver - Instagram Video Downloader</title>
+  <meta name="description" content="Download Instagram Reels and Videos for free using ReelSaver. Fast, easy, no login required.">
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #fefefe;
       text-align: center;
       padding: 50px 20px;
+      background: #fff;
     }
-    h1 {
-      color: #E1306C;
-      font-size: 2em;
-    }
+    h1 { color: #E1306C; font-size: 2em; }
     input, button {
       padding: 12px;
       width: 90%%;
-      max-width: 400px;
+      max-width: 420px;
       margin: 10px;
       font-size: 16px;
     }
@@ -37,25 +35,25 @@
       border: 1px dashed #aaa;
     }
     footer {
-      margin-top: 60px;
+      margin-top: 50px;
       font-size: 14px;
       color: #777;
     }
   </style>
 </head>
 <body>
-  <h1>InstaBoost</h1>
+  <h1>ReelSaver</h1>
   <p>Download Instagram Reels & Videos Instantly</p>
 
   <input id="urlInput" type="text" placeholder="Paste Instagram link here" />
   <button onclick="redirectToDownloader()">Download</button>
 
   <div id="ad-space">
-    <!-- Paste your ad script here -->
+    <!-- Your Monetag ad code goes here -->
     <p>Advertisement</p>
   </div>
 
-  <footer>© 2025 InstaBoost | Powered by sssinstagram</footer>
+  <footer>© 2025 ReelSaver | Built with ❤️</footer>
 
   <script>
     function redirectToDownloader() {
