--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>ReelSaver - Instagram Video Downloader</title>
   <meta name="description" content="Download Instagram Reels and Videos for free using ReelSaver. Fast, easy, no login required.">
+  <!-- ✅ Monetag meta tag for verification -->
+  <meta name="monetag" content="0f47429471672767b0ea74493a4ce656">
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -16,7 +17,7 @@
     h1 { color: #E1306C; font-size: 2em; }
     input, button {
       padding: 12px;
-      width: 90%%;
+      width: 90%;
       max-width: 420px;
       margin: 10px;
       font-size: 16px;
